syntax = "proto3";

package aizel;

// InferenceRequest is the request for inference.
message InferenceRequest {
    string model = 1;
    string input = 2;
}

// InferenceResponse is the response for inference.
message InferenceResponse {
}

// Inference is the inference service.
service Inference {
    rpc LlamaInference(InferenceRequest) returns (InferenceResponse) {}
}